fix: flickering font in index__title

--- a/src/pages/index/sections/hero-index/index.scss
+++ b/src/pages/index/sections/hero-index/index.scss
@@ -23,6 +23,10 @@
     left: -29px;
     @include tenor-248();
     color: #FFFFFF;
+
+    span {
+      will-change: transform;
+    }
   }
 
   &__images,
